plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.9'
}

application {
    mainClass = 'root.Main'
}



javafx {
    version = "15.0.1"
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.swing' ]
}

run {
   jvmArgs = [
           "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
           "--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
           "--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
           "--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
           "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
           "--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
           "--add-modules=javafx.controls,javafx.swing"
    ]
}

group 'org.winterbreak'
version '1.0-SNAPSHOT'

sourceCompatibility = 12

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile 'com.jfoenix:jfoenix:9.0.10'
}

jar {
    manifest {
        attributes 'Main-Class': 'root.Main'
    }
}

mainClassName = 'root.Main'
